# cineface

./: .gitignore  README.md  pyproject.toml
cineface/: config.py  display.py  hardware.py  helpers.py  main.py  totalmix.py
hardware/: cineface_panel.ai  switch.ai
tests/: test_totalmix.py
